# AdventOfCode

./: .gitignore  README.md
AOK/: build.gradle.kts
aoc25/: build.gradle.kts  settings.gradle.kts
aoc25/gradle/wrapper/: gradle-wrapper.properties
aoc25/src/main/kotlin/lu/cf/aoc25/: Day1.kt  Day12.kt  Day2.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt  Main.kt
aoc25/src/main/kotlin/lu/cf/aoc25/domain/: Reader.kt  SantasHelpers.kt
aoc25/src/main/resources/: 5tt  5ttt
aoc25py/: day11.ipynb  day12.ipynb  day9.ipynb  main.py  pyproject.toml
