[project]
name = "aoc25py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "shapely>=2.1.2",
    "toposort>=1.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
